@@ -1,7 +1,8 @@
 27.10.2018 Version 0.2.28
 Permission is allowed for admin to save on existing processes/pipelines in spite of they have beed used in public.
-Amazon folder and commands are updated as dbhost_username_profileid to eliminate conflict. 
+Amazon folder and commands are updated as username_profileid to eliminate conflict. 
 Amazon loading status feature is updated to keep sshtext available while reloading.
+Amazon folder and commands removed from dot and replaced with two underscores.
 
 26.10.2018 Version 0.2.27
 Minor bug fixed while creating empty channels for deactivation of process feature .
